--- a/static/wrest_styles.css
+++ b/static/wrest_styles.css
@@ -14,7 +14,7 @@ body {
 }
 .info {
     margin-top: 20px;
-    font-size: 1.5em;
+    font-size: 50px;
     border: 2px solid white;
     color: red;
 }
