--- a/templates/display.html
+++ b/templates/display.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Display Excel Data</title>
+    <meta http-equiv="refresh" content="15">
+
     <style>
         .container {
             display: flex;
